[workspace]
members = [
    "linux/uhid-sys",
    "linux/uhid-tokio",
    "linux/uhid-tokio/example",
    "linux/user-daemon",
    "linux/system-daemon",
    "linux/test-authenticator",
    "linux/pi-hid",
    "linux/pi-u2f-adapter",
    "linux/pi-u2f-daemon",
    "linux/pi-u2f-tests",
    "u2f-core",
    "u2fhid-protocol",
]
resolver = '2'

[profile.release]
lto = true
panic = 'abort'
